--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-modal-video": "^1.2.8",
     "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
+    "react-spring": "^9.4.5",
     "react-tsparticles": "^1.37.4",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.45.0",
