--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vie-react",
+  "name": "great-react",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.17.12",
     "@fullcalendar/common": "^5.11.0",
+    "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
@@ -18,6 +20,7 @@
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "next": "12.0.4",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.0",
