--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "next": "12.0.4",
+    "next-i18next": "^11.0.0",
     "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
+    "react-calendar": "^3.7.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
