--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.0.4",
     "next-i18next": "^11.0.0",
     "next-transpile-modules": "^9.0.0",
+    "next-videos": "1.5.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-calendar": "^3.7.0",
