--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/react": "^5.11.1",
     "@fullcalendar/timegrid": "^5.11.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
     "next": "12.0.4",
     "next-i18next": "^11.0.0",
@@ -25,6 +26,7 @@
     "next-videos": "1.5.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.6.0",
     "react-calendar": "^3.7.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.0",
@@ -37,6 +39,7 @@
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.45.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "swiper": "^7.3.0",
     "typewriter-effect": "^2.18.2"
   },
