--- a/src/data/app.json
+++ b/src/data/app.json
@@ -1,5 +1,5 @@
 {
-    "lightLogo": "/img/logo_new_blackBG.png",
-    "darkLogo": "/img/logo_new_blackBG.png",
+    "lightLogo": "/img/logo-great-light.png",
+    "darkLogo": "/img/logo-great-light.png",
     "showLoading": true
 }
